egonlang-core/res/examples/invalid/block_expr_mismatch_type_prefix_bang_tuple.eg
{ !(1, "foo",) };

// out: TypeError: mismatched types: expected type `bool` but received `tuple<number, string>`